#14267 migrate to JUnit 6.1.x and Java 17 - baseline; + remove deprecated API-usage (#14955)
* #14267 JUnit 6.1.0

* #14267 Java 17 as baseline instead of 11

* #14267 OpenRewrite: UpgradeToJava17

chan

* #14267 fix imports (caused by OpenRewrite)

with help by Claude Code

* JUnit 6.1.3

* Showcase: CountryService - remove deprecated API-usage

* PF Selenium: BootstrapExtension - remove deprecated API-usage

* Showcase: ChartView - remove deprecated API-usage

* Showcase: PrimeIconsView - remove deprecated API-usage

* IT: DatePicker015 - remove deprecated API-usage

* Remove redundant Tab casting in AccordionPanelRenderer

Removed redundant casting of child to Tab since it's already checked as an instance of Tab.

---------

Co-authored-by: Melloware <mellowaredev@gmail.com>